--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="/css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700,800&display=swap" rel="stylesheet">
     <title>Firebase auth app</title>
 </head>
@@ -81,18 +82,18 @@
         </div>
       </div>
 
-<!-- CREATE GUIDE MODAL -->
+<!-- CREATE TASK MODAL -->
 <div id="modal-create" class="modal">
     <div class="modal-content">
-        <h4>Create Guide</h4><br />
+        <h4>Create Task</h4><br />
         <form id="create-form">
           <div class="input-field">  
             <input type="text" id="title" required>
-            <label for="title">Guide Title</label>
+            <label for="title">Task Title</label>
            </div>
             <div class="input-field">
-              <textarea id="content" class="materialize-textarea" required></textarea>
-              <label for="content">Guide Content</label>
+              <textarea id="description" class="materialize-textarea" required></textarea>
+              <label for="description">Task Description</label>
             </div>
             <button class="btn #7c4dff deep-purple accent-2 z-depth-1">Create</button>
           </form>
@@ -101,23 +102,7 @@
 
  <!-- TASKS LIST -->
 <div class="container" style="margin-top: 50px;">
-        <ul class="collapsible z-depth-0 guides" style="border: none;">
-          <li>
-            <div class="collapsible-header grey lighten-4">Task title</div>
-            <div class="collapsible-body white">Lorem ipsum dolor sit amet.</div>
-          </li>
-          <li>
-            <div class="collapsible-header grey lighten-4">Task title</div>
-            <div class="collapsible-body white"><span>Lorem ipsum dolor sit amet.</span></div>
-          </li>
-          <li>
-            <div class="collapsible-header grey lighten-4">Task title</div>
-            <div class="collapsible-body white"><span>Lorem ipsum dolor sit amet.</span></div>
-          </li>
-          <li>
-            <div class="collapsible-header grey lighten-4">Task title</div>
-            <div class="collapsible-body white"><span>Lorem ipsum dolor sit amet.</span></div>
-          </li>
+        <ul class="collapsible z-depth-0 tasks" style="border: none;">
         </ul>
 </div>
       
