--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
         <input type="password" id="signup-password" required />
         <label for="signup-password">Choose password</label>
     </div>
+    <div class="input-field">
+      <input type="text" id="signup-bio" required />
+      <label for="signup-bio">Biography</label>
+  </div>
     <button class="btn #7c4dff deep-purple accent-2 z-depth-1">Sign up</button>
     </form>
     </div>
