--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <li class="logged-in">
                 <a href="#" class="grey-text" id="logout">Logout</a>
               </li>
-              <li class="logged-in">
+              <li class="admin">
                 <a href="#" class="grey-text modal-trigger" data-target="modal-create">Create Task</a>
               </li>
               <li class="logged-out">
@@ -37,6 +37,13 @@
         </ul>
     </div>
 </nav>
+
+<!-- ADMIN ACTIONS --> 
+
+<form class="center-align admin-actions admin" style="margin: 40px auto; max-width: 300px; display: none;">
+  <input type="email" placeholder="User email" id="admin-email" required>
+  <button class="btn-small #7c4dff deep-purple accent-2 z-depth-1">Make admin</button>
+</form>
 
 <!-- SIGN UP MODAL -->
 <div id="modal-signup" class="modal">
@@ -56,6 +63,7 @@
       <label for="signup-bio">Biography</label>
   </div>
     <button class="btn #7c4dff deep-purple accent-2 z-depth-1">Sign up</button>
+    <p class="error pink-text center-align"></p>
     </form>
     </div>
 </div>
@@ -74,6 +82,7 @@
             <label for="login-password">Your password</label>
         </div>
         <button class="btn #7c4dff deep-purple accent-2 z-depth-1">Login</button>
+        <p class="error pink-text center-align"></p>
         </form>
     </div>
 </div>
@@ -115,6 +124,7 @@
 <!-- Firebase auth and firestore -->
 <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-firestore.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-functions.js"></script>
 
 <script>
   // Web app's Firebase configuration
@@ -130,6 +140,8 @@
   // Auth and firestore references 
   const auth = firebase.auth();
   const db = firebase.firestore();
+  const functions = firebase.functions();
+
 </script>
 <!-- JavaScript files -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
